--- a/styles/style.css
+++ b/styles/style.css
@@ -209,3 +209,40 @@ footer {
 footer span {
   color: rgb(251, 162, 79);
 }
+/* media-quary */
+@media screen and (max-width: 567px) {
+  .banner-content {
+    flex-direction: column;
+  }
+  .bannert-details {
+    text-align: center;
+    margin: 50px 0;
+  }
+  .bannert-details h1 {
+    font-size: 40px;
+
+    text-align: center;
+  }
+  .bannert-details p {
+    color: rgb(130, 130, 130);
+    font-size: 18px;
+    text-align: center;
+  }
+  .about-me-content {
+    flex-direction: column;
+  }
+  .about-me-imge {
+    margin-bottom: 50px;
+  }
+  #recipies-part .recipies {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .recipies-card {
+    width: 100%;
+  }
+  .review-part-content {
+    flex-direction: column;
+    align-items: center;
+  }
+}
